--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -132,7 +132,20 @@ AC_PROG_RANLIB
 AC_PROG_YACC
 AC_PROG_INSTALL
 
-AC_CHECK_HEADERS(inttypes.h limits.h stddef.h string.h strings.h stdlib.h time.h unistd.h)
+AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h unistd.h)
+
+# Use <inttypes.h> only if it exists,
+# doesn't clash with <sys/types.h>, and declares intmax_t.
+AC_MSG_CHECKING(for inttypes.h)
+AC_CACHE_VAL(gcc_cv_header_inttypes_h,
+[AC_TRY_COMPILE(
+  [#include <sys/types.h>
+#include <inttypes.h>],
+  [intmax_t i = -1;],
+  [AC_DEFINE_UNQUOTED(HAVE_INTTYPES_H)
+   gcc_cv_header_inttypes_h=yes],
+  gcc_cv_header_inttypes_h=no)])
+AC_MSG_RESULT($gcc_cv_header_inttypes_h)
 
 GCC_NEED_DECLARATION(malloc)
 GCC_NEED_DECLARATION(realloc)
