--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -278,6 +278,6 @@ c++.distdir:
 	done
 	cd inc; \
 	for file in *[0-9a-zA-Z+]; do \
-	  ln $$file ../tmp/ginclude >/dev/null 2>&1 \
-	   || cp $$file ../tmp/ginclude; \
+	  ln $$file ../tmp/cp/inc >/dev/null 2>&1 \
+	   || cp $$file ../tmp/cp/inc; \
 	done
