Yet more tries on this ...
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16413 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -276,7 +276,7 @@ c++.distdir:
 	for file in *[0-9a-zA-Z+]; do \
 	  ln $$file ../tmp/cp >/dev/null 2>&1 || cp $$file ../tmp/cp; \
 	done
-	cd inc; \
+	cd cp/inc; \
 	for file in *[0-9a-zA-Z+]; do \
 	  ln $$file ../../tmp/cp/inc >/dev/null 2>&1 \
 	   || cp $$file ../../tmp/cp/inc; \
