See if need declarations for index and rindex.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16521 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -151,6 +151,8 @@ GCC_NEED_DECLARATION(malloc)
 GCC_NEED_DECLARATION(realloc)
 GCC_NEED_DECLARATION(calloc)
 GCC_NEED_DECLARATION(free)
+GCC_NEED_DECLARATION(index)
+GCC_NEED_DECLARATION(rindex)
 
 AC_DECL_SYS_SIGLIST
 
