(vax-*-sysv*): Fix typo in setting of xm_file.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16678 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2479,7 +2479,7 @@ for machine in $build $host $target; do
 		;;
 	vax-*-sysv*)			# vaxen running system V
 		tm_file="${tm_file} vax/vaxv.h"
-		xm_file="${tm_file} vax/xm-vaxv.h"
+		xm_file="${xm_file} vax/xm-vaxv.h"
 		float_format=vax
 		;;
 	vax-*-netbsd*)
