Only give error on bad --with-cpu value for target.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16728 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2619,8 +2619,11 @@ for machine in $build $host $target; do
 				;;
 
 			*)
-				echo "Unknown cpu used with --with-cpu=$with_cpu" 1>&2
-				exit 1
+				if [[ x$pass2done = xyes ]]
+				then
+					echo "Unknown cpu used with --with-cpu=$with_cpu" 1>&2
+					exit 1
+				fi
 				;;
 		esac
 		;;
@@ -2633,8 +2636,11 @@ for machine in $build $host $target; do
 				target_cpu_default2="TARGET_CPU_$with_cpu"
 				;;
 			*)
-				echo "Unknown cpu used with --with-cpu=$with_cpu" 1>&2
-				exit 1
+				if [[ x$pass2done = xyes ]]
+				then
+					echo "Unknown cpu used with --with-cpu=$with_cpu" 1>&2
+					exit 1
+				fi
 				;;
 		esac
 		;;
