--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -132,7 +132,7 @@ AC_PROG_RANLIB
 AC_PROG_YACC
 AC_PROG_INSTALL
 
-AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h unistd.h)
+AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h unistd.h sys/file.h)
 
 # Use <inttypes.h> only if it exists,
 # doesn't clash with <sys/types.h>, and declares intmax_t.
