--- a/gcc/objc/Make-lang.in
+++ b/gcc/objc/Make-lang.in
@@ -71,7 +71,7 @@ cc1obj: $(P) $(OBJC_OBJS) $(OBJS) $(BC_OBJS) $(LIBDEPS)
 objc-parse.o : $(srcdir)/objc/objc-parse.c \
    $(CONFIG_H) $(TREE_H) \
    $(srcdir)/c-lex.h $(srcdir)/c-tree.h $(srcdir)/input.h \
-   $(srcdir)/flags.h $(srcdir)/objc/objc-act.h
+   $(srcdir)/flags.h $(srcdir)/output.h $(srcdir)/objc/objc-act.h
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -I$(srcdir)/objc \
 	-c $(srcdir)/objc/objc-parse.c
 
@@ -90,7 +90,7 @@ objc-act.o : $(srcdir)/objc/objc-act.c \
    $(CONFIG_H) $(TREE_H) $(RTL_H) \
    $(srcdir)/c-tree.h $(srcdir)/c-lex.h \
    $(srcdir)/flags.h $(srcdir)/objc/objc-act.h $(srcdir)/input.h \
-   $(srcdir)/function.h $(srcdir)/c-parse.h
+   $(srcdir)/function.h $(srcdir)/output.h $(srcdir)/c-parse.h
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) -I$(srcdir)/objc \
 	-c $(srcdir)/objc/objc-act.c
 
