Add check for kill.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16850 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -158,6 +158,7 @@ AC_CHECK_FUNCS(bzero)
 AC_CHECK_FUNCS(bcmp)
 AC_CHECK_FUNCS(index)
 AC_CHECK_FUNCS(rindex)
+AC_CHECK_FUNCS(kill)
 
 GCC_NEED_DECLARATION(malloc)
 GCC_NEED_DECLARATION(realloc)
