(AC_HEADER_{STDC,TIME}): Add calls. (AC_CHECK_HEADERS): Add fcntl.h times.h, sys/times.h, sys/resource.h, and sys/param.h. (getenv): Check if need declaration.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16906 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -132,7 +132,9 @@ AC_PROG_RANLIB
 AC_PROG_YACC
 AC_PROG_INSTALL
 
-AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h unistd.h sys/file.h)
+AC_HEADER_STDC
+AC_HEADER_TIME
+AC_CHECK_HEADERS(limits.h stddef.h string.h strings.h stdlib.h time.h times.h fcntl.h unistd.h sys/file.h sys/time.h sys/resource.h sys/param.h)
 
 # Use <inttypes.h> only if it exists,
 # doesn't clash with <sys/types.h>, and declares intmax_t.
@@ -166,6 +168,7 @@ GCC_NEED_DECLARATION(calloc)
 GCC_NEED_DECLARATION(free)
 GCC_NEED_DECLARATION(index)
 GCC_NEED_DECLARATION(rindex)
+GCC_NEED_DECLARATION(getenv)
 
 AC_DECL_SYS_SIGLIST
 
