Fix spelling errors.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/premerge-fsf-branch@16915 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -333,7 +333,7 @@ LIB1FUNCS_EXTRA =
 LIB2FUNCS_EXTRA = 
 
 # Default float.h source to use for cross-compiler.
-# This is overidden by configure.
+# This is overridden by configure.
 CROSS_FLOAT_H=$(srcdir)/config/float-@float_format@.h
 
 # Program to convert libraries.
