--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -424,7 +424,7 @@ for machine in $build $host $target; do
 		# On NetBSD, the headers are already okay, except for math.h.
 		fixincludes=fixinc.math
 		;;
-	arm-*-linux-gnuaout*)		# ARM Linux
+	arm-*-linux-gnuaout*)		# ARM GNU/Linux
 		cpu_type=arm
 		xm_file=arm/xm-linux.h
 		xmake_file=x-linux
@@ -805,44 +805,44 @@ for machine in $build $host $target; do
 		install_headers_dir=install-headers-cpio
 		broken_install=yes
 		;;
-	i[[3456]]86-*-linux-gnuoldld*)	# Intel 80386's running Linux
+	i[[3456]]86-*-linux-gnuoldld*)	# Intel 80386's running GNU/Linux
 		xm_file=i386/xm-linux.h # with a.out format using pre BFD linkers
 		xmake_file=x-linux-aout
 		tmake_file="t-linux-aout i386/t-crtstuff"
 		tm_file=i386/linux-oldld.h
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in
 		broken_install=yes
 		gnu_ld=yes
 		;;
-	i[[3456]]86-*-linux-gnuaout*)		# Intel 80386's running Linux
+	i[[3456]]86-*-linux-gnuaout*)	# Intel 80386's running GNU/Linux
 		xm_file=i386/xm-linux.h		# with a.out format
 		xmake_file=x-linux-aout
 		tmake_file="t-linux-aout i386/t-crtstuff"
 		tm_file=i386/linux-aout.h
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in #The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
 		;;
 	i[[3456]]86-*-linux-gnulibc1)
-		xm_file=i386/xm-linux.h	# Intel 80386's running Linux
+		xm_file=i386/xm-linux.h	# Intel 80386's running GNU/Linux
 		xmake_file=x-linux	# with ELF format using the
-		tm_file=i386/linux.h	# Linux C library 5
+		tm_file=i386/linux.h	# GNU/Linux C library 5
 		tmake_file="t-linux t-linux-gnulibc1 i386/t-crtstuff"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
  		if [[ x$enable_threads = xyes ]]; then
  			thread_file='single'
  		fi
 		;;
-	i[[3456]]86-*-linux-gnu*)		# Intel 80386's running Linux
+	i[[3456]]86-*-linux-gnu*)	# Intel 80386's running GNU/Linux
 		xm_file=i386/xm-linux.h # with ELF format using glibc 2
-		xmake_file=x-linux	# aka Linux C library 6
+		xmake_file=x-linux	# aka GNU/Linux C library 6
 		tm_file=i386/linux.h
 		tmake_file="t-linux i386/t-crtstuff"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
  		if [[ x$enable_threads = xyes ]]; then
@@ -1463,32 +1463,32 @@ for machine in $build $host $target; do
 		extra_parts="crtbegin.o crtend.o"
 		extra_headers=math-68881.h
 		;;
-	m68k-*-linux-gnuaout*)		# Motorola m68k's running Linux
+	m68k-*-linux-gnuaout*)		# Motorola m68k's running GNU/Linux
 		xm_file=m68k/xm-linux.h	# with a.out format
 		xmake_file=x-linux
 		tm_file=m68k/linux-aout.h
 		tmake_file="t-linux-aout m68k/t-linux-aout"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		extra_headers=math-68881.h
 		gnu_ld=yes
 		;;
-	m68k-*-linux-gnulibc1)		# Motorola m68k's running Linux
+	m68k-*-linux-gnulibc1)		# Motorola m68k's running GNU/Linux
 		xm_file=m68k/xm-linux.h	# with ELF format using the
-		xmake_file=x-linux	# Linux C library 5
+		xmake_file=x-linux	# GNU/Linux C library 5
 		tm_file=m68k/linux.h
 		tmake_file="t-linux t-linux-gnulibc1 m68k/t-linux"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		extra_headers=math-68881.h
 		gnu_ld=yes
 		;;
-	m68k-*-linux-gnu*)			# Motorola m68k's running Linux
+	m68k-*-linux-gnu*)		# Motorola m68k's running GNU/Linux
 		xm_file=m68k/xm-linux.h	# with ELF format using glibc 2
-		xmake_file=x-linux	# aka the Linux C library 6.
+		xmake_file=x-linux	# aka the GNU/Linux C library 6.
 		tm_file=m68k/linux.h
 		tmake_file="t-linux m68k/t-linux"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		extra_headers=math-68881.h
 		gnu_ld=yes
 		if [[ x$enable_threads = xyes ]]; then
@@ -2338,31 +2338,31 @@ for machine in $build $host $target; do
 		#float_format=i128
 		float_format=i64
 		;;
-	sparc-*-linux-gnuaout*)		# Sparc's running Linux, a.out
+	sparc-*-linux-gnuaout*)		# Sparc's running GNU/Linux, a.out
 		xm_file="sparc/xm-sparc.h sparc/xm-linux.h"
 		tm_file=sparc/linux-aout.h
 		xmake_file=x-linux
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
 		;;
-	sparc-*-linux-gnulibc1*)	# Sparc's running Linux, libc5
+	sparc-*-linux-gnulibc1*)	# Sparc's running GNU/Linux, libc5
 		xm_file="sparc/xm-sparc.h sparc/xm-linux.h"
 		xmake_file=x-linux
 		tm_file=sparc/linux.h
 		tmake_file="t-linux t-linux-gnulibc1 sparc/t-linux"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
 		;;
-	sparc-*-linux-gnu*)		# Sparc's running Linux, libc6
+	sparc-*-linux-gnu*)		# Sparc's running GNU/Linux, libc6
 		xm_file="sparc/xm-sparc.h sparc/xm-linux.h"
 		xmake_file=x-linux
 		tm_file=sparc/linux.h
 		tmake_file="t-linux sparc/t-linux"
 		extra_parts="crtbegin.o crtbeginS.o crtend.o crtendS.o"
-		fixincludes=Makefile.in #On Linux, the headers are ok already.
+		fixincludes=Makefile.in # The headers are ok already.
 		broken_install=yes
 		gnu_ld=yes
  		if [[ x$enable_threads = xyes ]]; then
@@ -2448,12 +2448,12 @@ for machine in $build $host $target; do
 		tm_file=sparc/sp64-elf.h
 		extra_parts="crtbegin.o crtend.o"
 		;;
-	sparc64-*-linux*)		# 64-bit Sparc's running Linux
+	sparc64-*-linux*)		# 64-bit Sparc's running GNU/Linux
 		tmake_file=sparc/t-sp64
 		xm_file="sparc/xm-sp64.h sparc/xm-linux.h"
 		tm_file=sparc/linux64.h
 		xmake_file=x-linux
-		fixincludes=Makefile.in	# On Linux, the headers are ok already.
+		fixincludes=Makefile.in	# The headers are ok already.
 		gnu_ld=yes
 		;;
 # This hasn't been upgraded to GCC 2.
