--- a/gcc/java/Make-lang.in
+++ b/gcc/java/Make-lang.in
@@ -289,13 +289,13 @@ java/expr.o: java/expr.c $(CONFIG_H) $(JAVA_TREE_H) java/jcf.h real.h \
   $(RTL_H) $(EXPR_H) java/javaop.h java/java-opcodes.h except.h \
   java/java-except.h java/java-except.h java/parse.h toplev.h \
   $(SYSTEM_H) $(GGC_H) gt-java-expr.h
-java/java-tree-inline.o: tree-inline.c $(CONFIG_H) $(SYSTEM_H) \
+java/java-tree-inline.o: old-tree-inline.c $(CONFIG_H) $(SYSTEM_H) \
    $(TREE_H) $(RTL_H) expr.h flags.h params.h input.h insn-config.h \
    $(INTEGRATE_H) $(VARRAY_H) $(HASHTAB_H) $(SPLAY_TREE_H) toplev.h \
-   langhooks.h $(C_COMMON_H) $(srcdir)/tree-inline.h
+   langhooks.h $(srcdir)/tree-inline.h
 	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) \
 	-DINLINER_FOR_JAVA=1 \
-	$(srcdir)/tree-inline.c -o $@
+	$(srcdir)/old-tree-inline.c -o $@
 java/jcf-depend.o: java/jcf-depend.c $(CONFIG_H) $(SYSTEM_H) java/jcf.h
 java/jcf-parse.o: java/jcf-parse.c $(CONFIG_H) $(JAVA_TREE_H) flags.h \
   input.h java/java-except.h $(SYSTEM_H) toplev.h java/parse.h $(GGC_H) \
