* gimplify.c (declare_tmp_vars): Don't add temps to block vars.         * tree-inline.c (remap_decls): Split out from remap_block.         (copy_bind_expr): Remap BIND_EXPR_VARS separately from block vars.
        * c-simplify.c (simplify_expr_stmt): Call set_file_and_line_for_stmt.

        * gimplify.c: New file.
        (push_gimplify_context, pop_gimplify_context): New fns.
        (gimple_push_bind_expr, gimple_pop_bind_expr): New fns.
        (simplify_bind_expr): Use them.
        (gimple_current_bind_expr, gimple_add_tmp_var): New fn.
        (foreach_stmt): Recurse if necessary.
        (various): Use generic interfaces instead of c-specific ones.
        * c-simplify.c: Move language-independent code to gimplify.c.
        (simplify_c_loop): Use add_tree instead of add_stmt_to_compound.
        (various): Use new *_bind_expr interfaces.
        * Makefile.in (C_AND_OBJC_OBJS): Add gimplify.o.
        (gimplify.o): New rule.

        * c-decl.c (c_expand_body): Dump trees here.
        * c-simplify.c (simplify_function_body): Not here.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@57815 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -729,7 +729,7 @@ C_AND_OBJC_OBJS = attribs.o c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
   tree-cfg.o tree-dfa.o tree-ssa.o tree-optimize.o \
   c-simplify.o c-call-graph.o tree-simple.o simple-break-elim.o \
   simple-goto-elim.o tree-dchain.o tree-ssa-pre.o tree-alias-type.o \
-  tree-mudflap.o \
+  tree-mudflap.o gimplify.o \
   tree-alias-ecr.o tree-alias-common.o tree-alias-steen.o \
   disjoint-set.o tree-ssa-ccp.o tree-ssa-dce.o
 
@@ -1405,6 +1405,8 @@ tree-optimize.o : tree-optimize.c tree-optimize.h tree-flow.h $(CONFIG_H) \
 c-simplify.o : c-simplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h tree-simple.h varray.h flags.h \
    langhooks.h toplev.h rtl.h tree-flow.h $(BASIC_BLOCK_H) langhooks-def.h
+gimplify.o : gimplify.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) errors.h \
+   diagnostic.h tree-simple.h tree-inline.h varray.h langhooks.h langhooks-def.h
 simple-break-elim.o : simple-break-elim.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
    $(C_TREE_H) $(C_COMMON_H) diagnostic.h tree-dchain.h
 simple-goto-elim.o : simple-goto-elim.c $(CONFIG_H) $(SYSTEM_H) $(TREE_H) \
