--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -508,6 +508,9 @@ else
        ia64-*-linux*)
 	 # Has broken backtrace()
 	 ;;
+       s390*-*-linux*)
+	 # Has broken backtrace()
+	 ;;
        *)
          AC_DEFINE(HAVE_BACKTRACE)
 	 ;;
@@ -887,6 +890,12 @@ case "${host}" in
     SIGNAL_HANDLER=include/dwarf2-signal.h
     ;;
  alpha*-*-linux*)
+    SIGNAL_HANDLER=include/dwarf2-signal.h
+    ;;
+ s390*-*-linux*)
+    SIGNAL_HANDLER=include/s390-signal.h
+    ;;
+ x86_64*-*-linux*)
     SIGNAL_HANDLER=include/dwarf2-signal.h
     ;;
  sparc*-*-linux*)
